adjust max modal image height

--- a/sober-child/style.css
+++ b/sober-child/style.css
@@ -30,6 +30,10 @@ Template: sober
   display: none;
 }
 
+.sober-popup .popup-image img {
+  max-height: 300px;
+}
+
 
 .comingSoon__imageWrap {
   object-fit: fill;
